--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>无缝轮播</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
-		<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="./style.css">
         <script src="./main.js"></script>
 	</head>
